fix(ui): reduce spacing between title and search bar on mobile (#5400)

--- a/src/routes/Boards/Boards.scss
+++ b/src/routes/Boards/Boards.scss
@@ -150,16 +150,15 @@ $side-padding--desktop: 14vw;
     // stretch main to full width
     grid-template-columns: $spacing--md auto auto 1fr auto auto $spacing--md;
     // adds a row where the mobile search bar resides,
-    grid-template-rows: $spacing--md 56px $spacing--sm 32px $spacing--md 57px $spacing--sm auto 1fr;
+    grid-template-rows: $spacing--md 56px $spacing--sm 32px $spacing--md 57px auto 1fr;
     grid-template-areas:
       ".    .        .       .       .       .        ."
       ".    logo     .       .       .       user     ."
       ".    .        .       .       .       .        ."
       ".    title    title   title   title   title    ."
       ".    .        .       .       .       .        ."
-      ".    .        .       .       .       .        ."
-      ".    .        .       .       .       .        ."
       ".    search2  search2 search2 search2 search2  ."
+      ".    .        .       .       .       .        ."
       "main main     main    main    main    main     main";
 
     &--view-type-edit {
